First Version of the Client Application

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "coliv-app",
-  "version": "0.1.0",
+  "author": "David Dosenovic",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
