--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.1",
     "axios": "^1.4.0",
+    "country-flag-icons": "^1.5.7",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-datepicker": "^4.11.0",
